; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/video/geode/extr_display_gx.c_gx_set_hw_palette_reg.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/video/geode/extr_display_gx.c_gx_set_hw_palette_reg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fb_info = type { %struct.gxfb_par* }
%struct.gxfb_par = type { i32 }

@DC_PAL_ADDRESS = common dso_local global i32 0, align 4
@DC_PAL_DATA = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gx_set_hw_palette_reg(%struct.fb_info* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.fb_info*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.gxfb_par*, align 8
  %12 = alloca i32, align 4
  store %struct.fb_info* %0, %struct.fb_info** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %13 = load %struct.fb_info*, %struct.fb_info** %6, align 8
  %14 = getelementptr inbounds %struct.fb_info, %struct.fb_info* %13, i32 0, i32 0
  %15 = load %struct.gxfb_par*, %struct.gxfb_par** %14, align 8
  store %struct.gxfb_par* %15, %struct.gxfb_par** %11, align 8
  %16 = load i32, i32* %8, align 4
  %17 = shl i32 %16, 8
  %18 = and i32 %17, 16711680
  store i32 %18, i32* %12, align 4
  %19 = load i32, i32* %9, align 4
  %20 = and i32 %19, 65280
  %21 = load i32, i32* %12, align 4
  %22 = or i32 %21, %20
  store i32 %22, i32* %12, align 4
  %23 = load i32, i32* %10, align 4
  %24 = lshr i32 %23, 8
  %25 = and i32 %24, 255
  %26 = load i32, i32* %12, align 4
  %27 = or i32 %26, %25
  store i32 %27, i32* %12, align 4
  %28 = load %struct.gxfb_par*, %struct.gxfb_par** %11, align 8
  %29 = load i32, i32* @DC_PAL_ADDRESS, align 4
  %30 = load i32, i32* %7, align 4
  %31 = call i32 @write_dc(%struct.gxfb_par* %28, i32 %29, i32 %30)
  %32 = load %struct.gxfb_par*, %struct.gxfb_par** %11, align 8
  %33 = load i32, i32* @DC_PAL_DATA, align 4
  %34 = load i32, i32* %12, align 4
  %35 = call i32 @write_dc(%struct.gxfb_par* %32, i32 %33, i32 %34)
  ret void
}

declare dso_local i32 @write_dc(%struct.gxfb_par*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
